[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Tile.gd" type="Script" id=1]
[ext_resource path="res://ressources/paints/White_Tile.png" type="Texture" id=2]
[ext_resource path="res://ressources/paints/Peincil.png" type="Texture" id=3]
[ext_resource path="res://ressources/paints/gravite.png" type="Texture" id=4]
[ext_resource path="res://ressources/paints/eclair.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="Animation" id=2]
resource_name = "sprites"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("eclair:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("gravite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 0 ]
}

[node name="WhiteTile" type="StaticBody2D"]
input_pickable = true
script = ExtResource( 1 )

[node name="visual" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 5

[node name="Target_paint" type="Sprite" parent="."]
position = Vector2( 0, -26.91 )
z_index = 5
texture = ExtResource( 3 )

[node name="physicBox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/sprites = SubResource( 2 )

[node name="gravite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -32 )
texture = ExtResource( 4 )
vframes = 2
hframes = 4

[node name="eclair" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -32 )
texture = ExtResource( 5 )
vframes = 4
hframes = 4
frame = 14

[node name="delay" type="Timer" parent="."]
[connection signal="mouse_entered" from="." to="." method="_on_WhiteTile_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_WhiteTile_mouse_exited"]
[connection signal="animation_finished" from="anim" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="delay" to="." method="_on_timeout"]
